Make PSEP flow use TokenStore with ProcessingContext
Make PSEP flow use TokenStore with ProcessingContext

#3432